# packages-swipl-win

./: .gitignore  CMakeLists.txt  Completion.cpp  Completion.h  ConsoleEdit.cpp  ConsoleEdit.h  FlushOutputEvents.cpp  FlushOutputEvents.h  MINGW.md  Makefile.dmg  PREDICATE.h  ParenMatching.cpp  ParenMatching.h  Preferences.cpp  Preferences.h  README.md  SwiPrologEngine.cpp  SwiPrologEngine.h  Swipl_IO.cpp  Swipl_IO.h  ansi_esc_seq.cpp  ansi_esc_seq.h  blockSig.h  build-app  build.templ  do_events.h  emacs_bindings.kms  lqUty_global.h  main.cpp  pqConsole.cpp  pqConsole.doxy  pqConsole.h  pqConsole.pro  pqConsole.qrc  pqConsole_global.h  pqMainWindow.cpp  pqMainWindow.h  pqTerm.cpp  pqTerm.h  swipl-win.pro  (+4 more)
